Prevent buffer overflow in lua async lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,11 @@ if(CMAKE_BUILD_TOOL MATCHES "make")
   endif(NOT CMAKE_C_FLAGS MATCHES "-Wall")
 endif(CMAKE_BUILD_TOOL MATCHES "make")
 
+IF(CMAKE_COMPILER_IS_GNUCC)
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O2")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O2")
+ENDIF(CMAKE_COMPILER_IS_GNUCC)
+
 if(NOT WIN32)
   string(ASCII 27 Esc)
   set(ColorReset "${Esc}[m")
